--- a/ClientWPF/Messages.xaml
+++ b/ClientWPF/Messages.xaml
@@ -8,6 +8,7 @@
         Title="Messages" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         >
     <Grid>
 
@@ -36,9 +37,9 @@
         <Rectangle Fill="Gray" RadiusX="11" RadiusY="11" Margin="129,49,232,614"/>
         <Rectangle Margin="33,100,30,77" >
             <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#8EC5FC" Offset="0.1"/>
-                    <GradientStop Color="#792AF5" Offset="1"/>
+                <LinearGradientBrush StartPoint="0.966,0.013" EndPoint="0.032,0.965">
+                    <GradientStop Color="#FFCD7C44" Offset="0.164"/>
+                    <GradientStop Color="#FF7B38E6" Offset="0.76"/>
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
@@ -63,10 +64,79 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <TextBox x:Name="mes_from" HorizontalAlignment="Left" Height="49" Margin="33,545,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="307"/>
-        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34" Click="Send_Click"/>
-        <TextBox x:Name="mes_t_sb" HorizontalAlignment="Left" Height="336" Margin="39,204,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="295" FontSize="16" 
+        <TextBox x:Name="mes_from" HorizontalAlignment="Left" Height="27" Margin="45,520,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275" Background="Transparent" BorderThickness="0"/>
+        <!--<Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34" Click="Send_Click"/>-->
+        <!--<Кнопка отправить сообщение>-->
+        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,552,90,76" Width="140" >
+            <StackPanel.Resources>
+                <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
+                    <Border BorderBrush="#333" BorderThickness="1" CornerRadius="11" 
+                                TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
+                                MinWidth="80" Padding="5" Name="myBorder">
+                        <Border.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#FF272727" Offset="0"></GradientStop>
+                                <GradientStop Color="#474747" Offset="1"></GradientStop>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"
+                              VerticalAlignment="Center" HorizontalAlignment="Center"></ContentPresenter>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#777777" Offset="0"></GradientStop>
+                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#939292" Offset="0"></GradientStop>
+                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#444" Offset="0"></GradientStop>
+                                        <GradientStop Color="#222" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Opacity" Value="0.4"></Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </StackPanel.Resources>
+            <StackPanel.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.315"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.523"/>
+                </TransformGroup>
+            </StackPanel.RenderTransform>
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Отправить сообщение" Click="Send_Click" Margin="-80,0,-45,0" Height="41" />
+
+        </StackPanel>
+        <TextBox x:Name="mes_t_sb" HorizontalAlignment="Left" Height="336" Margin="33,149,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="307" FontSize="16" 
             BorderBrush="White" Background="#600A4030"
             Padding="10"/>
+        <Label Content="Введите сообщение:" HorizontalAlignment="Left" FontWeight="Light" FontFamily="helvetica" Foreground="White" Margin="33,485,0,0" VerticalAlignment="Top" Width="162" Height="30"/>
+        <Border
+                        Height="2"
+                        Background="White"
+                        Opacity="0.5" Margin="45,545,50,124"/>
     </Grid>
 </Window>
