--- a/ClientWPF/Interfaces/AccountWindow.xaml
+++ b/ClientWPF/Interfaces/AccountWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ClientWPF.Account"
+﻿<Window x:Class="ClientWPF.AccountPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -67,7 +67,7 @@
 
 
         </Grid>
-        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Exit_Click">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -84,7 +84,7 @@
         <Button x:Name="messages" Content="Сообщения" HorizontalAlignment="Left" Margin="129,501,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click"/>
         <Button x:Name="litrs" Content="Литры" HorizontalAlignment="Left" Margin="129,526,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click_2"/>
         <Button x:Name="cars" Content="Автомобили" HorizontalAlignment="Left" Margin="129,426,0,0" VerticalAlignment="Top" Width="160" Click="cars_Click"/>-->
-        <Label x:Name="name_1" Content="" HorizontalAlignment="Left" Margin="150,190,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.6,-0.578" Foreground="White" FontWeight="Light" FontFamily="helvetica" FontSize="18"/>
+        <Label x:Name="nameLabel" Content="" HorizontalAlignment="Left" Margin="150,190,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.6,-0.578" Foreground="White" FontWeight="Light" FontFamily="helvetica" FontSize="18"/>
         <!--<Кнопка сообщения>-->
         <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,317,119,321" Width="131" >
             <StackPanel.Resources>
@@ -146,7 +146,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Сообщения" Click="Button_Click"   Margin="0,0,-9,0" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Сообщения" Click="ToMessagesPage_Click"   Margin="0,0,-9,0" />
 
         </StackPanel>
         <!--<Кнопка автомобили>-->
@@ -210,7 +210,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Автомобили" Click="cars_Click" Margin="0,0,-9.333,0" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Автомобили" Click="ToCarsPage_Click" Margin="0,0,-9.333,0" />
 
         </StackPanel>
         <!--<Кнопка настройки>-->
@@ -274,7 +274,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Настройки"  Margin="0,0,-9,0" Click="Button_Nastroiki" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Настройки"  Margin="0,0,-9,0" Click="ToSettingsPage_Click" />
 
         </StackPanel>
         <!--<Кнопка сообщества>-->
@@ -402,7 +402,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Литры" Click="Button_litr" Margin="0,0,-9,0" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Литры" Click="ToLitrsPage_Click" Margin="0,0,-9,0" />
 
         </StackPanel>
     </Grid>
