--- a/ClientWPF/Interfaces/CarsWindow.xaml
+++ b/ClientWPF/Interfaces/CarsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.litrs"
+﻿<Window x:Class="ClientWPF.CarsPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="litrs" Width="370" Height="671"
+        Title="cars" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -49,18 +49,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Количество литров:"
+                <TextBlock Text="Мои автомобили"
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
-                           HorizontalAlignment="Center" Margin="83,0,69,0" Width="218"/>
+                           HorizontalAlignment="Center" Margin="106,0,105,0"/>
 
             </StackPanel>
 
 
         </Grid>
-        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="BackClick_ToAccountPage">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -72,14 +72,12 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Label x:Name="count_of_litrs"  HorizontalAlignment="Left" Margin="159,235,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Light" FontFamily="helvetica" FontSize="18"/>
-        <!--<Button x:Name="increase" Content="+" FontSize="30" HorizontalAlignment="Left" Margin="211,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="increase_Click"/>
-        <Button x:Name="dicrease" Content="-" FontSize="30" HorizontalAlignment="Left" Margin="78,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="dicrease_Click"/>-->
-        <!--<Кнопка +>-->
-        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,335,-35,293" Width="145" >
+        <!--<Button  x:Name="AddCar" Content="Добавить автомобиль" HorizontalAlignment="Left" Margin="96,472,0,0" VerticalAlignment="Top" Width="178" Click="AddCar_Click"/>-->
+        <!--<Кнопка добавить автомобиль>-->
+        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,405,80,223" Width="140" >
             <StackPanel.Resources>
                 <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
-                    <Border BorderBrush="#333" BorderThickness="1"  
+                    <Border BorderBrush="#333" BorderThickness="1" CornerRadius="11" 
                                 TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
                                 MinWidth="80" Padding="5" Name="myBorder">
                         <Border.Background>
@@ -136,72 +134,15 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="+" Click="increase_Click" Margin="-45,0,95,0" Height="50" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Добавить автомобиль" Click="AddCar_Click" Margin="-80,0,-25,0" Height="41" />
 
         </StackPanel>
-        <!--<Кнопка ->-->
-        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,335,55,293" Width="155" >
-            <StackPanel.Resources>
-                <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
-                    <Border BorderBrush="#333" BorderThickness="1"  
-                                TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
-                                MinWidth="80" Padding="5" Name="myBorder">
-                        <Border.Background>
-                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                <GradientStop Color="#FF272727" Offset="0"></GradientStop>
-                                <GradientStop Color="#474747" Offset="1"></GradientStop>
-                            </LinearGradientBrush>
-                        </Border.Background>
-                        <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"
-                              VerticalAlignment="Center" HorizontalAlignment="Center"></ContentPresenter>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="myBorder" Property="Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                        <GradientStop Color="#777777" Offset="0"></GradientStop>
-                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="myBorder" Property="Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                        <GradientStop Color="#939292" Offset="0"></GradientStop>
-                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="False">
-                            <Setter TargetName="myBorder" Property="Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                        <GradientStop Color="#444" Offset="0"></GradientStop>
-                                        <GradientStop Color="#222" Offset="1"></GradientStop>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter TargetName="myBorder" Property="Opacity" Value="0.4"></Setter>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </StackPanel.Resources>
-            <StackPanel.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="0.315"/>
-                    <RotateTransform/>
-                    <TranslateTransform Y="-0.523"/>
-                </TransformGroup>
-            </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="-" Click="dicrease_Click" Margin="-90,0,0,0" Height="50" HorizontalAlignment="Left" Width="91" />
-
-        </StackPanel>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="177" Margin="82,209,0,0" VerticalAlignment="Top" Width="204">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
