--- a/ClientWPF/Interfaces/LitrsWindow.xaml
+++ b/ClientWPF/Interfaces/LitrsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.AddCar"
+﻿<Window x:Class="ClientWPF.LitrsPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="AddCar" Width="370" Height="671"
+        Title="litrs" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -49,18 +49,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Добавить автомобиль"
+                <TextBlock Text="Количество литров:"
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
-                           HorizontalAlignment="Center" Margin="66,0,80,0" Width="224"/>
+                           HorizontalAlignment="Center" Margin="83,0,69,0" Width="218"/>
 
             </StackPanel>
 
 
         </Grid>
-        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="BackClick_ToAccountPage">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -72,24 +72,14 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-
-        <Label Content="Марка:" Foreground="White" HorizontalAlignment="Left" Margin="53,188,0,0" VerticalAlignment="Top" />
-        <TextBox x:Name="mark" HorizontalAlignment="Left" Height="23" Margin="53,214,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-
-        <!--<Button  x:Name="signcar" Content="Добавить авто" HorizontalAlignment="Left" Margin="60,550,0,0" VerticalAlignment="Top" Width="244" Height="34" AutomationProperties.Name="Reg" Click="signcar_Click" />-->
-        <TextBox x:Name="numbers" HorizontalAlignment="Left" Height="23" Margin="53,263,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-        <Label Content=" Номера:" Foreground="White" HorizontalAlignment="Left" Margin="53,237,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="old" HorizontalAlignment="Left" Height="23" Margin="53,371,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-        <Label Content="Год выпуска:" Foreground="White" HorizontalAlignment="Left" Margin="53,345,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="description" HorizontalAlignment="Left" Height="23" Margin="53,425,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-        <Label Content="Описание" Foreground="White" HorizontalAlignment="Left" Margin="53,399,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.391,0.731"/>
-        <TextBox x:Name="brand" HorizontalAlignment="Left" Height="23" Margin="53,317,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-        <Label Content=" Бренд:" Foreground="White" HorizontalAlignment="Left" Margin="53,291,0,0" VerticalAlignment="Top"/>
-        <!--<Кнопка добавить автомобиль>-->
-        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,535,95,93" Width="140" >
+        <Label x:Name="count_of_litrs"  HorizontalAlignment="Left" Margin="159,235,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Light" FontFamily="helvetica" FontSize="18"/>
+        <!--<Button x:Name="increase" Content="+" FontSize="30" HorizontalAlignment="Left" Margin="211,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="increase_Click"/>
+        <Button x:Name="dicrease" Content="-" FontSize="30" HorizontalAlignment="Left" Margin="78,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="dicrease_Click"/>-->
+        <!--<Кнопка +>-->
+        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,335,-35,293" Width="145" >
             <StackPanel.Resources>
                 <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
-                    <Border BorderBrush="#333" BorderThickness="1" CornerRadius="11" 
+                    <Border BorderBrush="#333" BorderThickness="1"  
                                 TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
                                 MinWidth="80" Padding="5" Name="myBorder">
                         <Border.Background>
@@ -146,34 +136,72 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Добавить авто" Click="signcar_Click" Margin="-80,0,-45,0" Height="41" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="+" Click="Increase_Click" Margin="-45,0,95,0" Height="50" />
 
         </StackPanel>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="53,495,66,174"/>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="53,235,66,434"/>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="52,394,67,275"/>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="53,446,66,223"/>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="52,340,67,329"/>
-        <Border
-                        Height="2"
-                        Background="White"
-                        Opacity="0.5" Margin="53,284,66,385"/>
-        <TextBox x:Name="region" HorizontalAlignment="Left" Height="23" Margin="53,474,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="251" Background="Transparent" BorderThickness="0"/>
-        <Label Content="Регион" Foreground="White" HorizontalAlignment="Left" Margin="53,448,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.391,0.731"/>
+        <!--<Кнопка ->-->
+        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,335,55,293" Width="155" >
+            <StackPanel.Resources>
+                <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
+                    <Border BorderBrush="#333" BorderThickness="1"  
+                                TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
+                                MinWidth="80" Padding="5" Name="myBorder">
+                        <Border.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#FF272727" Offset="0"></GradientStop>
+                                <GradientStop Color="#474747" Offset="1"></GradientStop>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"
+                              VerticalAlignment="Center" HorizontalAlignment="Center"></ContentPresenter>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#777777" Offset="0"></GradientStop>
+                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#939292" Offset="0"></GradientStop>
+                                        <GradientStop Color="#575757" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Cursor" Value="Hand"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="myBorder" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                        <GradientStop Color="#444" Offset="0"></GradientStop>
+                                        <GradientStop Color="#222" Offset="1"></GradientStop>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="myBorder" Property="Opacity" Value="0.4"></Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </StackPanel.Resources>
+            <StackPanel.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.315"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.523"/>
+                </TransformGroup>
+            </StackPanel.RenderTransform>
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="-" Click="Dicrease_Click" Margin="-90,0,0,0" Height="50" HorizontalAlignment="Left" Width="91" />
+
+        </StackPanel>
     </Grid>
 </Window>
