--- a/ClientWPF/Interfaces/MessagesWindow.xaml
+++ b/ClientWPF/Interfaces/MessagesWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.cars"
+﻿<Window x:Class="ClientWPF.MessagesPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="cars" Width="370" Height="671"
+        Title="Messages" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -48,19 +48,11 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Мои автомобили"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="22"
-                           Foreground="White"
-                           HorizontalAlignment="Center" Margin="106,0,105,0"/>
-
-            </StackPanel>
+            <StackPanel VerticalAlignment="Center"/>
 
 
         </Grid>
-        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="BackClick_ToAccountPage">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -72,10 +64,10 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <TextBox x:Name="List_of_cars" Background="#600A4030" HorizontalAlignment="Left" Height="193" Margin="62,201,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="254"/>
-        <!--<Button  x:Name="AddCar" Content="Добавить автомобиль" HorizontalAlignment="Left" Margin="96,472,0,0" VerticalAlignment="Top" Width="178" Click="AddCar_Click"/>-->
-        <!--<Кнопка добавить автомобиль>-->
-        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,405,80,223" Width="140" >
+        <TextBox x:Name="inputMess" HorizontalAlignment="Left" Height="27" Margin="45,520,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275" Background="Transparent" BorderThickness="0"/>
+        <!--<Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34" Click="Send_Click"/>-->
+        <!--<Кнопка отправить сообщение>-->
+        <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,552,90,76" Width="140" >
             <StackPanel.Resources>
                 <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
                     <Border BorderBrush="#333" BorderThickness="1" CornerRadius="11" 
@@ -135,8 +127,16 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Добавить автомобиль" Click="AddCar_Click" Margin="-80,0,-25,0" Height="41" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Отправить сообщение" Click="Send_Click" Margin="-80,0,-45,0" Height="41" />
 
         </StackPanel>
+        <TextBox x:Name="messTextBox" HorizontalAlignment="Left" Height="336" Margin="33,149,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="307" FontSize="16" 
+            BorderBrush="White" Background="#600A4030"
+            Padding="10"/>
+        <Label Content="Введите сообщение:" HorizontalAlignment="Left" FontWeight="Light" FontFamily="helvetica" Foreground="White" Margin="33,485,0,0" VerticalAlignment="Top" Width="162" Height="30"/>
+        <Border
+                        Height="2"
+                        Background="White"
+                        Opacity="0.5" Margin="45,545,50,124"/>
     </Grid>
 </Window>
