--- a/ClientWPF/Interfaces/AccountWindow.xaml
+++ b/ClientWPF/Interfaces/AccountWindow.xaml
@@ -10,6 +10,57 @@
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         >
+    <Window.Resources>
+        <ControlTemplate x:Key="Button_Template" TargetType="{x:Type Button}">
+            <Border BorderBrush="#333" BorderThickness="1" CornerRadius="11" 
+                TextBlock.Foreground="#ddd" Margin="0 0 10 0" MaxHeight="30"
+                MinWidth="80" Padding="5" x:Name="myBorder">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="#FF272727" Offset="0"/>
+                        <GradientStop Color="#474747" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"
+                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter TargetName="myBorder" Property="Background">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#777777" Offset="0"/>
+                                <GradientStop Color="#575757" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter TargetName="myBorder" Property="Cursor" Value="Hand"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter TargetName="myBorder" Property="Background">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#939292" Offset="0"/>
+                                <GradientStop Color="#575757" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter TargetName="myBorder" Property="Cursor" Value="Hand"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter TargetName="myBorder" Property="Background">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#444" Offset="0"/>
+                                <GradientStop Color="#222" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter TargetName="myBorder" Property="Opacity" Value="0.4"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
     <Grid>
 
         <Border Background="Gray" CornerRadius="30" Grid.RowSpan="2"/>
@@ -274,7 +325,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Настройки"  Margin="0,0,-9,0" Click="ToSettingsPage_Click" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Друзья"  Margin="0,0,-9,0" Click="ToSettingsPage_Click" />
 
         </StackPanel>
         <!--<Кнопка сообщества>-->
@@ -338,7 +389,7 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Сообщества"  Margin="0,0,-9,0" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Width="140 " Content="Отзывы"  Margin="0,0,-9,0" Click="Button_Click" />
 
         </StackPanel>
         <!--<Кнопка литры>-->
