--- a/ClientWPF/Interfaces/WriteReview.xaml
+++ b/ClientWPF/Interfaces/WriteReview.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="ClientWPF.WriteReview"
+﻿<Window x:Class="ClientWPF.Interfaces.WriteReview"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ClientWPF"
+        xmlns:local="clr-namespace:ClientWPF.Interfaces"
         mc:Ignorable="d"
         Title="WriteReview" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         >
     <Grid>
 
@@ -36,9 +37,9 @@
         <Rectangle Fill="Gray" RadiusX="11" RadiusY="11" Margin="129,49,232,614"/>
         <Rectangle Margin="33,100,30,77" >
             <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#8EC5FC" Offset="0.1"/>
-                    <GradientStop Color="#792AF5" Offset="1"/>
+                <LinearGradientBrush StartPoint="0.966,0.013" EndPoint="0.032,0.965">
+                    <GradientStop Color="#FFCD7C44" Offset="0.164"/>
+                    <GradientStop Color="#FF7B38E6" Offset="0.76"/>
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
@@ -48,18 +49,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Написать отзыв"
+                <TextBlock Text="Написать отзыв: "
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
-                           HorizontalAlignment="Center" Margin="106,0,105,0"/>
+                           HorizontalAlignment="Center" Margin="104,0,70,0" Width="196" RenderTransformOrigin="0.802,0.673"/>
 
             </StackPanel>
 
 
         </Grid>
-        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="BackClick_ToCarsPage">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -71,9 +72,9 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <TextBox x:Name="TextReview" Background="#600A4030" HorizontalAlignment="Left" Height="193" Margin="62,301,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="254"/>
-        <ComboBox x:Name="friends" HorizontalAlignment="Left" Margin="62,249,0,0" VerticalAlignment="Top" Width="254"/>
-        <Button x:Name="sendreview" Content="Button" HorizontalAlignment="Left" Margin="62,525,0,0" VerticalAlignment="Top" Width="254" Height="23"/>
+        <ComboBox x:Name="AllNumbersofCar"  HorizontalAlignment="Left" Margin="66,196,0,0" VerticalAlignment="Top" Width="242"/>
+        <TextBox x:Name="TextOfReview" HorizontalAlignment="Left" Height="180" Margin="66,260,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="252"/>
+        <Button x:Name="SendReview" Content="Отправить отзыв" HorizontalAlignment="Left" Margin="66,464,0,0" VerticalAlignment="Top" Width="252" Click="SendReview_Click"/>
 
     </Grid>
 </Window>
